assets/section-hero-shop-all.css
/* ... */
@media (min-width: 1000px) {

    .imagen-info-text {
        position: absolute;
        background: #a5e9ff;
        margin: 10px;
        font-size: 14px;
        font-weight: 500;
        color: #000;
        line-height: 20px;
        padding: 10px;
        font-family: OldschoolGrotesk-Regular;
        width: calc(50% - 20px) !important;
        bottom: 10px!important;
    }

    .custom_product_image {
        padding-bottom: 126%!important;
    }

    
    .endrock-featured-collection__wrapper {
        padding: 50px 90px 20px!important;
    }

}




.endrock-featured-collection__container {
    padding-top: 0px!important;
}



.why-duo__media {
    min-height: 500px;
    position: relative;
}


@media (max-width: 1200px){
.endrock-featured-collection__wrapper {
    padding: 0px 0px 0px!important;
}
}


.endrock-featured-collection .products__heading.add-toCart {

    margin: 0 !important;
    padding: 0;
}


@media (max-width:1000px) {

    .product-list_ {
        width: calc(50% - 12px);
        margin-bottom: 32px;
    }

    .imagen-info-text{
        left: 0;
    }


.imagencontainer {
    width: calc(50% - 10px) !important;
    margin-bottom: 30px;
}

.template--collection .endrock-featured-collection .products_wrapper .product-list {
    width: calc(50% - 10px);
}


.image-info {
    position: absolute;
    height: 100%;
    width: calc(50% - 10px)!important;
}

.content.active {
    display: block;
    width: calc(50% - 10px)!important;
}

.imagencontainerfinal{
    width: calc(100% - 23px)!important;
    margin: 0 15%;
}

.imagen-info-text {
    margin: 10px!important;
    font-size: 10px!important;
    line-height: 14px!important;
    padding: 15px!important;
    margin: 0px 5px !important;
    width: fit-content!important;
}


}

.media--transparent {
    padding-bottom: 100%;
}

.custom_product_image {
    padding-bottom: 126% !important;
}

.imagencontainer {
    width: calc(25% - 10px);
}

.imagencontainerfinal {
    width: calc(50% - 23px);
}

.imagencard {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.link_info {
    bottom: 0!important;
    position: absolute;
    margin-left: 30px;
    color: black;
    font-weight: 600;
    line-height: 30px;
}

.link_info3 {
    bottom: 0px;
    position: absolute;
    margin-left: 0px;
    color: black;
    font-weight: 600;
    line-height: 30px;
}

.title_info3 {
    color: #000;
    font-family: Schnyder S;
    font-size: 29px;
    font-style: normal;
    font-weight: 300;
    line-height: 20px;
    text-align: left;
    position: relative;
    top: 0%;
    margin-bottom: 15px;
    margin-top: 15px;
}

.imagen-info-text {
       position: absolute;
    width: calc(23% - 23px);
    background: #A5E9FF;
    margin: 0px;
    font-size: 14px;
    font-weight: 500;
    color: black;
    line-height: 20px;
    padding: 10px;
    font-family: OldschoolGrotesk-Regular;
    width: calc(49% - 23px);
    bottom: 20px;
    height: fit-content;
}



.product-list_sw {
    width: 100%!important;
}


@media (max-width: 768px) {

    .endrock-featured-collection .product_title {
        line-height: 12px !important;
        margin-bottom: 3px !important;
        margin-top: 3px !important;
        font-size: 14px!important;
    }

    .packtitle_
    {
        font-size:12px!important;
    }

    .title-with-price{

        display: flex;
  justify-content: center;
  align-items: center;
    }
}


.endrock-featured-collection .product_title {
    margin-bottom: 0px!important;
}


.packtitle_ {
    font-size: 16px;
    line-height: 18px !important;
    padding: 0;
    margin: 0;
    font-weight: 600;
}



.endrock-featured-collection .title-with-price .product-price {

    font-size: 20px!important;
    line-height: 18px!important;
 
    margin: 0;
  }

.tabs {
    display: flex;
    list-style: none;
    padding: 0;
    gap: 0px;
    font-size: 10px;
    margin: 5px;
    margin-top: -10px;
}


@media (max-width: 1024px) {
    .tabs{
        font-size: 8px;
    }

    .link_info{
        bottom: 40px !important;
    }
}

@media (max-width: 580px) {
    .header__icons {
        margin-right: 15px;
      }

  
    .custom_product_image img {
        width: 99%!important;
    }

    .media--transparent {
        padding-bottom: 121%!important;
    }
    
    .custom_product_image {
        padding-bottom: 121%!important;
    }

   
    .custom-product_form {
        margin-bottom: 10px!important;
    }

    .title_info {
        font-size: 30px !important;
        font-style: normal;
        font-weight: 300;
        line-height: 36px !important;
        max-width: 100%;
        text-align: left;
        position: relative;
        top: 10% !important;
        padding: 15px;
    }

    .cardthree {
        width: calc(100% - 0px) !important;
    }

   

  


    .link_info {
        bottom: 20px!important;
    }

 

 

    .title_info3 {
        font-size: 20px !important;
        line-height: 20px !important;
        top: 0% !important;
        margin-bottom: 5px !important;
        margin-top: 5px !important;
    }

    .tabs {
        font-size: 8px!important;
        margin: 5px 0px!important;
        letter-spacing: 0px;
    }

    .icon-with-text__wrapper .iwt-item {
        width: fit-content;
    }
}


.tab {
    text-align: center;
    color: black;
    cursor: pointer;
    font-weight: 600;
    min-width: 25%;
    margin-top: -5px;
}

.content {
    display: none;
}

.content.active {
    display: block;
    width: calc(25% - 23px);
}



.tabb {
    color: black;
    font-weight: 600;
    min-width: 25%;
    text-align: center;
    margin-top: -5px;
}

.why-duo_wrapper .left-content__heading {
    font-size: 50px!important;
    margin: 30px 0px 22px!important;
}
/* ... */

